[package]
name = "jetstreamer-horizon"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true

[dependencies]
lencode.workspace = true
agave-geyser-plugin-interface.workspace = true
solana-message.workspace = true
solana-transaction.workspace = true
solana-transaction-status.workspace = true
solana-hash.workspace = true
solana-signature.workspace = true
solana-address.workspace = true
solana-clock.workspace = true
solana-reward-info.workspace = true
solana-transaction-context.workspace = true
solana-system-interface.workspace = true
solana-cpi.workspace = true
once_cell.workspace = true
zstd.workspace = true
xxhash-rust.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
jetstreamer-firehose.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
futures-util.workspace = true
solana-message.workspace = true
solana-pubkey.workspace = true

[[bench]]
name = "encode_decode"
harness = false
