[package]
name = "jetstreamer-node"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true

[dependencies]
agave-snapshots.workspace = true
crossbeam-channel.workspace = true
jetstreamer-firehose.workspace = true
log.workspace = true
reqwest.workspace = true
serde_json.workspace = true
solana-account.workspace = true
solana-accounts-db.workspace = true
solana-clock.workspace = true
solana-genesis-utils.workspace = true
solana-geyser-plugin-manager.workspace = true
solana-hash.workspace = true
solana-ledger.workspace = true
solana-logger.workspace = true
solana-pubkey.workspace = true
solana-rpc.workspace = true
solana-runtime.workspace = true
solana-signature.workspace = true
solana-entry.workspace = true
solana-transaction.workspace = true
solana-transaction-status.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
